--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Web Dev Journey
+author: Sarah Schilz
+email: sarahschilz88@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ I am currently learning how to become a front-end web developer and by getting more familiar with Github it will enable me to make projects to show for future employer opportunites.
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+instagram_username: schz.dev
+github_username:  schz25
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme: minima
